# ocgtk

./: .ctxrc  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CI_UPDATE_SUMMARY.md  CLAUDE.md  CLAUDE.md.1776735852.bak  CONTRIBUTORS.md  DOCUMENTATION_INDEX.md  FFI_GUIDELINES.md  GCLOSURE_CLEANUP_ANALYSIS.md  GCLOSURE_DIAGRAM.txt  GETTING_STARTED.md  KNOWN_BUGS.md  LICENSE  PHASE3_0_IMPLEMENTATION.md  PHASE3_CODEGEN_PROPOSAL.md  PHASE3_CODEGEN_PROPOSAL_GI.md  PHASE3_GAP_ANALYSIS.md  PHASE3_OCaml_GENERATOR.md  PHASE3_VALGRIND_TESTING.md  PHASE4_2_COMPILATION_FIXES.md  PHASE4_2_IMPLEMENTATION.md  PHASE4_GAP_ANALYSIS.md  PHASE4_PLAN_SUMMARY.md  PHASE5_2_COMPILATION_VERIFICATION.md  PHASE5_2_SUMMARY.md  PHASE5_3_BUILD_INSTRUCTIONS.md  PHASE5_3_PLAN.md  PHASE5_3_SUMMARY.md  PHASE5_SUMMARY.md  PLANNING_SESSION_2025-11-16.md  README.md  ROADMAP.md  SECURITY_ANALYSIS_LABLGTK3.md  SECURITY_GUIDELINES.md  SETUP.md  STYLE_GUIDELINES.md  TODO.md  (+15 more)
conf-mingw-w64-gtk4-x86_64/: conf-mingw-w64-gtk4-x86_64.opam
gir_gen/: README.md  dune-project  gir_gen.opam
gir_gen/docs/: STATUS.md
gir_gen/docs/plans/: api_documentation_implementation.md  api_documentation_specification.md  constant-bindings.md  gobject_glib_type_mappings.md  gtk-versioning.md  interface_support.md  milestone-2-signals-phase4-PLAN.md  milestone-2-signals-phase4.md  milestone-2-signals-phase5-PLAN.md  milestone-2-signals.md  phase-6-signal-corpus.md  value_kinds_registry.md  varargs-bindings.md
gir_gen/lib/: c_stub_list_conv.ml  class_utils.ml  dependency_analysis.ml  dependency_analysis.mli  dune  exclude_list.ml  gir_type_pred.ml  gir_type_pred.mli  os_filter.mli  override_apply.ml  override_apply.mli  override_parser.ml  override_types.ml  override_types.mli  type_mappings.ml  types.ml  utils.ml  version_guard.mli
gir_gen/lib/generate/: c_stub_array_conv.ml  c_stub_bitfield.ml  c_stub_bitfield.mli  c_stub_class.ml  c_stub_class.mli  c_stub_constructor.ml  c_stub_enum.ml  c_stub_field.ml  c_stub_field.mli  c_stub_gvalue.ml  c_stub_helpers.ml  c_stub_helpers.mli  c_stub_method.ml  c_stub_method_out.ml  c_stub_property.ml  c_stub_record.ml  c_stub_record.mli  c_stub_type_analysis.ml  c_stubs.ml  class_gen.ml  class_gen_body.ml  class_gen_body.mli  class_gen_conflict_detection.ml  class_gen_field.ml  class_gen_field.mli  class_gen_helpers.ml  class_gen_method.ml  class_gen_type_resolution.ml  common.ml  (+17 more)
gir_gen/scripts/: dune  gen_signal_baseline.ml
gir_gen/test/: GIR_GEN_TESTING.md  dune  test_gir_gen.ml  test_gir_gen_integration.ml
lablgtk4/: BINDING_GENERATION.md  BITFIELDS_IMPLEMENTATION.md  KNOWN_BUGS.md  PHASE_5_3_SUMMARY.md  README.md  TESTING_WITH_GMAIN.md  TEST_SEGFAULT_FIX.md  TEST_SUITE_STATUS.md  XMLM_MIGRATION_SUMMARY.md  dune-project  gir_gen_changes_spec.md  lablgtk4.opam  object_polymorphism_design.md  pangoEnums.ml  regenerate_bindings.sh  run_stress_tests.sh  run_tests.sh  run_valgrind_tests.sh  valgrind.supp
lablgtk4/architecture/: adding_gir_library.md
lablgtk4/docs/: MIGRATION_CSS.md  MIGRATION_EVENTS.md  MIGRATION_FOCUS.md  MIGRATION_RENDERING.md  VALGRIND_TESTING.md
lablgtk4/examples/: README.md  counter.ml  counter_simple.ml  demo_all.ml  dune  login_form.ml  record_demo.sh  settings_panel.ml  text_editor.ml
lablgtk4/src/: a_t_context.ml  a_t_context.mli  about_dialog.ml  about_dialog.mli  accessible.ml  accessible.mli  accessible_list.ml  accessible_list.mli  accessible_range.ml  accessible_text.ml  accessible_text.mli  action_bar.ml  action_bar.mli  actionable.ml  actionable.mli  actionable_interface.ml  activate_action.ml  adjustment.ml  adjustment.mli  adjustment_class.ml  alert_dialog.ml  alert_dialog.mli  alternative_trigger.ml  alternative_trigger.mli  alternative_trigger_class.ml  any_filter.ml  any_filter.mli  any_filter_class.mli  app_chooser.ml  app_chooser.mli  app_chooser_button.ml  app_chooser_button.mli  app_chooser_dialog.ml  app_chooser_dialog.mli  app_chooser_widget.ml  app_chooser_widget.mli  application.ml  application.mli  application_and__window_and__window_group.ml  application_and__window_and__window_group.mli  (+1837 more)
lablgtk4/tests/: README.md  STRESS_TESTS.md  dune  test_all_enums.ml  test_box.ml  test_button.ml  test_clipboard.ml  test_closure_stress.ml  test_containers.ml  test_enums.ml  test_event_controller.ml  test_event_controller_runtime.ml  test_ffi_integration.ml  test_gdk.ml  test_glib.ml  test_gobj.ml  test_gobject.ml  test_gpack.ml  test_grid.ml  test_gtk_init.ml  test_integration.ml  test_pango.ml  test_range.ml  test_records.c  test_records.ml  test_snapshot.ml  test_text.ml  test_widget.ml  test_window.ml
lablgtk4/tools/: verify_completeness.sh  verify_phase2.py
ocgtk/: .ocamlformat-ignore  ARRAY_HANDLING_PLAN.md  README.md  dune-project  ocgtk.opam
ocgtk/.claude/: settings.local.json
ocgtk/architecture/: FFI_GUIDELINES.md  README.md  adding_gir_library.md  ci_distro_testing.md  linking_and_dead_code_elimination.md
ocgtk/docs/: KNOWN_BUGS.md
ocgtk/examples/: README.md  counter.ml  counter_simple.ml  demo_all.ml  dune  form_example.ml  login_form.ml  picture_test.ml  record_demo.sh  settings_panel.ml  text_editor.ml
ocgtk/overrides/: cairo.sexp  gdk.sexp  gdkpixbuf.sexp  gio.sexp  graphene.sexp  gsk.sexp  gtk.sexp  pango.sexp  pangocairo.sexp
ocgtk/src/: Cairo.ml  GMain.ml  Gdk.ml  Gdkpixbuf.ml  Gio.ml  Graphene.ml  Gsk.ml  Gtk.ml  Pango.ml  PangoCairo.ml  dune  ocgtk.ml  ocgtk.mli
ocgtk/tests/: README.md  dune  test_all_enums.ml  test_bounded_int.ml  test_clipboard.ml  test_closure_stress.ml  test_closure_with_gc.ml  test_containers.ml  test_enum_roundtrip.ml  test_enum_values.ml  test_event_controller.ml  test_event_controller_runtime.ml  test_ffi_integration.ml  test_gdk.ml  test_gdkpixbuf.ml  test_gio_volume_monitor.ml  test_glib.ml  test_glib_bytes.ml  test_gobj.ml  test_gobject.ml  test_gobject_stress.ml  test_gpack.ml  test_grid.ml  test_gtk_init.ml  test_gvariant.ml  test_gvariant_text_format  test_gvariant_text_format.c  test_gvariant_type.ml  test_integration.ml  test_pango.ml  test_range.ml  test_snapshot.ml  test_window.ml
(+609 files in other folders)
