(lang dune 3.13)

(name gir_gen)

(version 0.1.0)

(generate_opam_files true)

(source
 (github chris-armstrong/ocgtk))

(license "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception")

(authors "Chris Armstrong")

(maintainers "hello@chrisarmstrong.dev")

(package
 (name gir_gen)
 (synopsis "GIR-to-OCaml binding generator for ocgtk")
 (description
  "Generates OCaml GTK 4 bindings from GObject Introspection (GIR) files.")
 (depends
  (ocaml
   (>= 5.3))
  (dune
   (>= 3.13))
  (containers
   (>= 3.0))
  (xmlm
   (>= 1.4))
  (re
   (>= 1.11))
  (fmt
   (>= 0.9))
  (logs
   (>= 0.7))
  (cmdliner
   (>= 1.3))
  (sexplib
   (>= 0.16))
  (ppx_sexp_conv
   (>= 0.16))
  (ppx_deriving
   (>= 5.0))
  (alcotest :with-test)
  (ppxlib :with-test)))
