(lang dune 3.2)
(name lablgtk4)
(version 4.0.0~dev)

(generate_opam_files true)

(source (github chris-armstrong/lablgtk))
(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)
(authors "Jacques Garrigue et al.")
(maintainers "lablgtk@math.nagoya-u.ac.jp")

(package
 (name lablgtk4)
 (synopsis "OCaml bindings for GTK 4")
 (description "LablGTK4 provides OCaml bindings for GTK 4, the latest version of the GTK toolkit for building graphical user interfaces.")
 (depends
  (ocaml (>= 4.09))
  (dune (>= 3.2))
  conf-gtk4
  cairo2
  (camlp5 :build)
  (alcotest :with-test)))
