(lang dune 3.13)

(name ocgtk)

(version 0.1~preview0)

(generate_opam_files true)

(source
 (github chris-armstrong/ocgtk))

(license LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception)

(authors "Chris Armstrong")

(maintainers "hello@chrisarmstrong.dev")

(package
 (name ocgtk)
 (synopsis "OCaml bindings for GTK 4")
 (description "ocgtk provides OCaml bindings for GTK 4")
 (depends
  (ocaml
   (>= 5.3))
  (dune
   (>= 3.13))
  conf-gtk4
  (integers (>= 0.7.0))
  xmlm
  fmt
  logs
  containers
  re
  sexplib
  ppx_sexp_conv
  ppx_deriving
  cmdliner
  ppxlib
  (alcotest :with-test)))
