; Dune build file for ocgtk
; Main library that depends on all sub-libraries

(library
 (name ocgtk)
 (public_name ocgtk)
 (wrapped false)
 (modules Gtk Gio Gdk GMain Gdkpixbuf Pango Gsk Graphene Cairo)  ; Wrapper modules to re-export from sub-libraries
 (libraries ocgtk_common ocgtk_gtk ocgtk_gio ocgtk_gdk ocgtk_gdkpixbuf ocgtk_pango ocgtk_gsk ocgtk_graphene ocgtk_cairo threads))
