; Test suite for ocgtk
;

(test
 (name test_gio_volume_monitor)
 (modules test_gio_volume_monitor)
 (libraries ocgtk.gio alcotest))

(test
 (name test_gobject_stress)
 (modules test_gobject_stress)
 (libraries ocgtk alcotest gtk_test_helpers))

; Blocked: GdkPixbuf.Pixbuf load/scale methods not yet generated
; (test
;  (name test_gdkpixbuf)
;  (modules test_gdkpixbuf)
;  (libraries ocgtk alcotest))

; Blocked: Pango layout/font methods not yet generated
; (test
;  (name test_pango)
;  (modules test_pango)
;  (libraries ocgtk alcotest))

; DISABLED: needs rewrite — inline gtk_available/require_gtk, migrate to Gtk_test_helpers first
; (test
;  (name test_clipboard)
;  (modules test_clipboard)
;  (libraries ocgtk alcotest))

; Tests moved to gtk/ subdirectory (active at tests/gtk/test_widget.ml)

; Blocked: GtkSnapshot append/render methods not yet generated
; (test
;  (name test_snapshot)
;  (modules test_snapshot)
;  (libraries ocgtk alcotest))

(test
 (name test_closure_stress)
 (modules test_closure_stress)
 (libraries ocgtk))

(test
 (name test_closure_with_gc)
 (modules test_closure_with_gc)
 (libraries ocgtk))

(test
 (name test_gtk_init)
 (modules test_gtk_init)
 (libraries ocgtk alcotest))

; Blocked: EventController key/motion/scroll binding methods not yet generated
; (test
;  (name test_event_controller)
;  (modules test_event_controller)
;  (libraries ocgtk alcotest))

; Blocked: EventController key/motion/scroll binding methods not yet generated
; (test
;  (name test_event_controller_runtime)
;  (modules test_event_controller_runtime)
;  (libraries ocgtk alcotest))

; Blocked: GObj module API not yet generated
; (test
;  (name test_gobj)
;  (modules test_gobj)
;  (libraries ocgtk alcotest))

(test
 (name test_integration)
 (modules test_integration)
 (libraries ocgtk alcotest))

; Tests moved to gtk/ subdirectory (active at tests/gtk/test_box.ml)

; Blocked: GtkGrid attach/remove/query_child bindings not yet generated
; (test
;  (name test_grid)
;  (modules test_grid)
;  (libraries ocgtk alcotest))

; Blocked: GtkBox/GtkGrid container management bindings not yet generated
; (test
;  (name test_containers)
;  (modules test_containers)
;  (libraries ocgtk alcotest))

; DISABLED: needs rewrite for new GTK4 API — GPack layout widget removed in GTK4
; (test
;  (name test_gpack)
;  (modules test_gpack)
;  (libraries ocgtk alcotest))

; DISABLED: needs rewrite for new GTK4 API — GWindow module replaced by Gtk.Window
; (test
;  (name test_window)
;  (modules test_window)
;  (libraries ocgtk alcotest))

; Tests moved to gtk/ subdirectory (active at tests/gtk/test_button.ml)

; Tests moved to gtk/ subdirectory (active at tests/gtk/test_range.ml)

(test
 (name test_gvariant)
 (modules test_gvariant)
 (libraries ocgtk alcotest integers))

(test
 (name test_gvariant_type)
 (modules test_gvariant_type)
 (libraries ocgtk alcotest))

(test
 (name test_glib_bytes)
 (modules test_glib_bytes)
 (libraries ocgtk alcotest))

(test
 (name test_bounded_int)
 (modules test_bounded_int)
 (libraries ocgtk alcotest))
