;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Code generation tools for GTK4 bindings                                 ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; Generate varcc.ml from varcc.ml4 using camlp5
; Modern camlp5 doesn't have o_keywords.cmo - we load pa_o.cmo (parser) and pr_o.cmo (printer)
; The -I flag ensures camlp5 can find the .cmo files in different opam environments
(rule
 (targets varcc.ml)
 (deps (:source varcc.ml4))
 (mode promote)
 (action (bash "camlp5o -I `camlp5o -where` pa_o.cmo pr_o.cmo -impl %{source} -o %{targets}")))

; Generate propcc.ml from propcc.ml4 using camlp5
(rule
 (targets propcc.ml)
 (deps (:source propcc.ml4))
 (mode promote)
 (action (bash "camlp5o -I `camlp5o -where` pa_o.cmo pr_o.cmo -impl %{source} -o %{targets}")))

; Build the code generation executables
(executables
 (names varcc propcc)
 (modules varcc propcc)
 (libraries camlp-streams)
 (flags (:standard -w -32)))

; Phase 3.0: GIR-based code generator
(executable
 (name gir_gen)
 (modules gir_gen)
 (libraries str unix xmlm))

; Test for GIR generator
(executable
 (name test_gir_gen)
 (modules test_gir_gen)
 (libraries str unix))
