;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Code generation tools for GTK4 bindings                                 ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; Generate varcc.ml from varcc.ml4 using camlp5
; Use wrapper script to handle both old (o_keywords.cmo) and new (pa_o.cmo) camlp5 versions
(rule
 (targets varcc.ml)
 (deps (:source varcc.ml4) (:script camlp5_convert.sh))
 (mode promote)
 (action (bash "bash %{script} %{source} %{targets}")))

; Generate propcc.ml from propcc.ml4 using camlp5
; Use wrapper script to handle both old (o_keywords.cmo) and new (pa_o.cmo) camlp5 versions
(rule
 (targets propcc.ml)
 (deps (:source propcc.ml4) (:script camlp5_convert.sh))
 (mode promote)
 (action (bash "bash %{script} %{source} %{targets}")))

; Build the code generation executables
(executables
 (names varcc propcc)
 (modules varcc propcc)
 (libraries camlp-streams)
 (flags (:standard -w -32)))

; Phase 3.0 & 5.0: GIR-based code generator (with cmdliner)
(executable
 (name gir_gen)
 (modules gir_gen)
 (libraries str unix xmlm cmdliner))

; Test for GIR generator
(executable
 (name test_gir_gen)
 (modules test_gir_gen)
 (libraries str unix))
