;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Code generation tools for GTK4 bindings                                 ;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

; Note: varcc and propcc have been removed during migration to gir_gen
; varcc - Legacy enum generator (replaced by gir_gen enum generation)
; propcc - Legacy property compiler (not used in lablgtk4, only lablgtk3)

; Phase 3.0 & 5.0: GIR-based code generator (with cmdliner)
; Now built in gir_gen/ subdirectory with modular structure

; Test for GIR generator
(test
 (name test_gir_gen)
 (modules test_gir_gen)
 (libraries str unix gir_gen_lib))


; Phase 5.2: High-level wrapper template generator
(executable
 (name wrapper_gen)
 (modules wrapper_gen)
 (libraries str cmdliner))

; Phase 5.2: .ml implementation file generator
(executable
 (name ml_impl_gen)
 (modules ml_impl_gen)
 (libraries str cmdliner))
