; Common library for ocgtk
; Hand-written library-agnostic code

; Configure pkg-config for GLib and GObject

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run %{exe:../config/discover.exe} --pkg glib-2.0 --pkg gobject-2.0)))

(library
 (name ocgtk_common)
 (public_name ocgtk.common)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names wrappers ml_glib ml_gobject)
  (flags
   -fPIC
   (:include c_flags.sexp)
   -Wno-deprecated-declarations))
 (c_library_flags
  (:include c_library_flags.sexp))
 (install_c_headers wrappers)
 (modules ocgtk_common Gaux Gpointer GError Gobject Glib))
